--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <br />
             東京デザインテクノロジーセンター専門学校に入学。
             <br />
-            IT⁨⁩デザイン科・UIUXデザイナー専攻を選択。
+            UIUXデザイナー専攻を選択。
             <br />
             趣味は、カラオケ・三國無双ゲーム・アニメと漫画見る
             ネイル・写真を撮る
