--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 						</div>
 						<div class="_2004-6-22-19-2-3-it-uiux">
 							<div class="_2004-6-22-19-2-3-it-uiux2"> 2004年6月22日生まれ、19歳。 <a
-									href="https://maps.app.goo.gl/iBpxwZPFR2CQdb1EA" target="_blank">岩手県</a> 生まれ、<a
+									href="https://maps.app.goo.gl/1HwnAkgzFJVBzjDd9" target="_blank">岩手県</a> 生まれ、<a
 									href="https://maps.app.goo.gl/Qhf4ybMpoH3L75YE8" target="_blank">福岡県</a> 、<a
 									href="https://maps.app.goo.gl/HADVUDzB3Hvaoke9A" target="_blank">東京都</a> 育ち。 <br />
 								<a href="https://www.vantanhs.com/index.php" target="_blank">バンタンデザイン研究所高等部</a> 入学。
@@ -142,6 +142,7 @@
 					<div class="div5"> <a
 							href="https://learn.microsoft.com/ja-jp/credentials/certifications/exams/az-900/"
 							target="_blank">Microsoft Azure AI基礎</a> </div>
+					<div class="div6"> <a href="https://mos.odyssey-com.co.jp/outline/" target="_blank">Excel</a> </div>
 				</div>
 
 				<div class="cert">
