--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 					<div class="div5"> <a
 							href="https://learn.microsoft.com/ja-jp/credentials/certifications/exams/az-900/"
 							target="_blank">Microsoft Azure AI基礎</a> </div>
-					<div class="div6"> <a href="https://mos.odyssey-com.co.jp/outline/" target="_blank">Excel</a> </div>
+					<div class="div6"> <a href="https://mos.odyssey-com.co.jp/outline/" target="_blank">Excel 2019</a> </div>
 				</div>
 
 				<div class="cert">
